# srcinit

./: .gitignore  Cargo.toml  README.md  requirements.txt  srcinit.py  srcinit.pyproj  srcinit.sln
src/: main.rs  sources.rs
