[package]
name = "srcinit"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
directories = "5.0.1"
indicatif = "0.17.8"
is-url = "1.0.4"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
rust-ini = "0.21.1"

[build-dependencies]
built = "0.7.4"
